--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
         ports:
             - ${BIND_INTERFACE}:${BIND_INTERFACE_PORT}:${API_PORT}
         volumes:
-            - ${HOST_MACHINE_DATA_DIR}:./data/
+            - ${HOST_MACHINE_DATA_DIR}:data/
         networks:
             - external
         logging:
