--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
         environment:
             API_PORT: ${API_PORT}
             SELF_URI: ${SELF_URI}
-            CODE_CHALLENGE_STR: ${SELF_URI}
+            CODE_CHALLENGE_STR: ${CODE_CHALLENGE_STR}
             TWITTER_CLIENT_ID: ${TWITTER_CLIENT_ID}
         ports:
             - ${BIND_INTERFACE}:${BIND_INTERFACE_PORT}:${API_PORT}
