--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,11 @@ services:
             SELF_URI: ${SELF_URI}
             CODE_CHALLENGE_STR: ${CODE_CHALLENGE_STR}
             TWITTER_CLIENT_ID: ${TWITTER_CLIENT_ID}
+            TWITTER_CLIENT_SECRET: ${TWITTER_CLIENT_SECRET}
         ports:
             - ${BIND_INTERFACE}:${BIND_INTERFACE_PORT}:${API_PORT}
         volumes:
-            - ${HOST_MACHINE_DATA_DIR}:data/
+            - ${HOST_MACHINE_DATA_DIR}:/app/data/
         networks:
             - external
         logging:
